<resources>
    <string name="app_name">User Login App</string>
    <string name="email_hint">Email</string>
    <string name="input_password">Password</string>
    <string name="login_button">Login</string>
    <string name="registration_button">Not Registered? Register</string>
    <string name="fundoo_notes_text">Fundoo Notes</string>
    <string name="user_registration_page">User Registration</string>
    <string name="user_first_name">FirstName</string>
    <string name="user_last_name">LastName</string>
    <string name="user_email_address">Email</string>
    <string name="user_phone_number">PhoneNumber</string>
    <string name="user_registration">SignUp</string>
    <string name="user_password">Password</string>
    <string name="user_date_of_birth">DateOfBirth</string>
    <string name="user_confirm_password">ConfirmPassword</string>
</resources>
