<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constaint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".user_module.login.view.LoginActivity">

        <TextView
            android:id="@+id/fundoo_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/fundoo_notes_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_email_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:animateLayoutChanges="true"
            android:filterTouchesWhenObscured="true"
            android:focusableInTouchMode="true"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundoo_note_text"
            app:layout_constraintVertical_chainStyle="packed">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:animateLayoutChanges="true"
            android:filterTouchesWhenObscured="true"
            android:focusableInTouchMode="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
            app:layout_constraintVertical_chainStyle="packed"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_password"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/login_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/registration_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>